# pomodoro_app

./: .env.example  .gitignore  FocusFlow.spec  Pomodoro-start.bat  Pomodoro.bat  README.md  analysis_manager.py  app_config_manager.py  config.py  config_history_manager.py  conftest.py  ctk_theme_config.py  feedback_window.py  force_gen_dashboard.py  game_progress_bar.py  goalsifter_client.py  goalsifter_settings.py  init_pb.py  interruption_window.py  main.py  migrate_projects.py  pb_sync_manager.py  pomodoro_data_manager.py  pomodoro_timer.py  pyproject.toml  requirements.txt  sync_history.py  sync_manager.py  ui_manager.py  visual_effects.py
docs/: 2026-07-12-phase2-execution.md  ROADMAP.md
scripts/: force_gen_dashboard.py  migrate_projects.py
tests/: conftest.py  test_all_time.py  test_app_paths.py  test_calendar.html  test_calendar_view.py  test_ctk_basic.py  test_dashboard.py  test_dashboard_data.py  test_focusflow_sync_store.py  test_goalsifter_auto_sync.py  test_goalsifter_client.py  test_goalsifter_settings.py  test_interruption_config.py  test_launch_contract.py  test_local_focus_items.py  test_local_focus_ui.py  test_local_only_runtime.py  test_long_break_logic.py  test_pomodoro_timer.py  test_project_management.py  test_summary.html  test_summary.py  test_sync_manual.py  test_ui_config.py  test_user_preferences.py
tools/: check_dtypes.py  check_duration_today.py  check_interruptions_db.py  check_python_details.py  check_python_sessions.py  check_raw_data.py  check_status.py  check_today.py  check_today_details.py  check_widget_size.py  debug_calendar.py  (+17 more)
(+27 files in other folders)
