[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "focusflow"
version = "3.1.0"
description = "Local-first desktop Pomodoro app with GoalSifter deep-work binding"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pygame==2.6.1",
    "pandas==2.3.0",
    "plotly==6.2.0",
    "customtkinter==5.2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
focusflow = "focusflow.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
